[tool.poetry]
name = "algorithm task one"
version = "0.1.0"
description = "Solve of Alg. Practice"
authors = ["Chumakov Mike <i@m-chumakov-dev.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
jupyter = "^1.0.0"
plotly = "^5.10.0"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
